tests/baselines/reference/importNonExportedMember1.errors.txt
b.ts(1,10): error TS2459: Module '"./a"' declares 'bar' locally, but it is not exported.


==== a.ts (0 errors) ====
    declare function foo(): any
    declare function bar(): any;
    export { foo };
    
==== b.ts (1 errors) ====
    import { bar } from "./a";
             ~~~
!!! error TS2459: Module '"./a"' declares 'bar' locally, but it is not exported.
!!! related TS2728 a.ts:2:18: 'bar' is declared here.
    